Button text alignment fix

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
     font-family: "Work-Sans",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: var(--fs-100);
     cursor: pointer;
+    text-align: start;
 }
 
 button:focus-visible {
